--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==0.8
 Flask-Celery==2.4.2
+Flask-SQLAlchemy==0.16
 Flask-Script==0.3.3
 Jinja2==2.6
 SQLAlchemy==0.7.6
@@ -8,7 +9,8 @@ amqplib==1.0.2
 anyjson==0.3.1
 argparse==1.2.1
 celery==2.5.3
-kombu==2.1.7
+kombu==2.1.3
 pysqlite==2.6.3
 python-dateutil==1.5
+selenium==2.21.2
 wsgiref==0.1.2
